tdf#160753 - sc: fix XMATCH function in search for empty cell

gave back a wrong result. With this fix the we can search for empty cells
and return as a result.

follow-up commit: 8df17c340193c89549d8c563b04d015156afa3fb
(tdf#160711 - sc fix XLOOKUP function search for empty cell)

Change-Id: I48a545125bdfa23c98a4fcb866ea782156a0b32b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/167596
Tested-by: Jenkins
Reviewed-by: Balazs Varga <balazs.varga.extern@allotropia.de>